[package]
name = "lumenauth"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for LumenAuth — license auth & HWID locking for desktop apps"
license = "MIT"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
